--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 description = "Config based pytorch model framework"
 authors = [{ name = "KurisuNya", email = "cuizhu1216@gmail.com" }]
 dependencies = [
-    "safetensors>=0.5.3",
-    "pyyaml>=6.0.2",
-    "loguru>=0.7.3",
-    "torch==2.6.0+cpu",
-    "torchvision==0.21.0+cpu",
-    "kurisuinfo>=0.2.0",
+    "pyyaml",
+    "loguru",
+    "torch>=2.0.0",
+    "kurisuinfo>=0.2.1",
+    "safetensors",
 ]
 readme = "README.md"
 requires-python = ">= 3.9"
@@ -21,10 +20,6 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 dev-dependencies = []
-
-[[tool.rye.sources]]
-name = "pytorch"
-url = "https://download.pytorch.org/whl/cpu"
 
 [tool.hatch.metadata]
 allow-direct-references = true
