--- a/example/simple_cnn/config.yaml
+++ b/example/simple_cnn/config.yaml
@@ -36,3 +36,5 @@ SimpleCNN:
     - [-1, ConvBNReLU, [256, 512]]
     - [-1, Classifier, [512, args.class_num]]
   converter: [resize_converter, [args.width]]
+
+main_module: [SimpleCNN, [3, 10, 0.5]]
