feat(module): support eval a string in config

--- a/example/simple_cnn/module/config.yaml
+++ b/example/simple_cnn/module/config.yaml
@@ -36,4 +36,5 @@ SimpleCNN:
     - [-1, ConvBNReLU, [128, 256]]
     - [-1, ConvBNReLU, [256, 512]]
     - [-1, Classifier, [512, args.class_num]]
-  converter: [resize_converter, [args.width]]
+  converters:
+    - [ResizeConverter, [args.width]]
