--- a/example/simple_cnn/module/config.yaml
+++ b/example/simple_cnn/module/config.yaml
@@ -1,6 +1,3 @@
-auto_register:
-  - ./example/simple_cnn/module/converter.py
-
 Flatten:
   layers:
     - [-1, "lambda x: x.view(x.size(0), -1)"]
@@ -23,14 +20,15 @@ Classifier:
     - [-1, nn.Linear, [in_ch, class_num]]
 
 SimpleCNN:
+  import:
+    - from utils import make_divisible
   args: [in_ch, class_num, width]
+  vars: [resize: "lambda ch: make_divisible(int(ch * width), 8)"]
   layers:
-    - [-1, ConvBNReLU, [in_ch, 16]]
-    - [-1, ConvBNReLU, [16, 32]]
-    - [-1, ConvBNReLU, [32, 64]]
-    - [-1, ConvBNReLU, [64, 128]]
-    - [-1, ConvBNReLU, [128, 256]]
-    - [-1, ConvBNReLU, [256, 512]]
-    - [-1, Classifier, [512, class_num]]
-  converters:
-    - [ResizeConverter, [width]]
+    - [-1, ConvBNReLU, [in_ch, resize(16)]]
+    - [-1, ConvBNReLU, [resize(16), resize(32)]]
+    - [-1, ConvBNReLU, [resize(32), resize(64)]]
+    - [-1, ConvBNReLU, [resize(64), resize(128)]]
+    - [-1, ConvBNReLU, [resize(128), resize(256)]]
+    - [-1, ConvBNReLU, [resize(256), resize(512)]]
+    - [-1, Classifier, [resize(512), class_num]]
