--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ build-backend = "hatchling.build"
 managed = true
 dev-dependencies = [
     "pytest>=8.3.5",
+    "pytest-cov>=6.0.0",
 ]
 
 [tool.hatch.metadata]
