--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
 name: Python package
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
@@ -11,25 +11,35 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
         pytorch-version: ["2.0", "2.1", "2.2", "2.3", "2.4", "2.5", "2.6"]
         exclude:
           - python-version: 3.12
             pytorch-version: 2.0
           - python-version: 3.12
             pytorch-version: 2.1
+          - python-version: 3.13
+            pytorch-version: 2.0
+          - python-version: 3.13
+            pytorch-version: 2.1
+          - python-version: 3.13
+            pytorch-version: 2.2
+          - python-version: 3.13
+            pytorch-version: 2.3
+          - python-version: 3.13
+            pytorch-version: 2.4
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade uv
-        uv pip install --system pytest pytest-cov
-        uv pip install --system torch==${{ matrix.pytorch-version }} pyyaml loguru kurisuinfo safetensors -e file:.
-    - name: pytest
-      run: |
-        pytest --cov=src
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade uv
+          uv pip install --system pytest pytest-cov
+          uv pip install --system torch==${{ matrix.pytorch-version }} pyyaml loguru kurisuinfo safetensors -e file:.
+      - name: pytest
+        run: |
+          pytest --cov=src
