--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,13 @@ jobs:
       matrix:
         python-version: ["3.10", "3.11", "3.12", "3.13"]
         pytorch-version: ["2.0", "2.1", "2.2", "2.3", "2.4", "2.5", "2.6"]
+        include:
+          - python-version: 3.10
+            pytorch-version: 1.11
+          - python-version: 3.10
+            pytorch-version: 1.12
+          - python-version: 3.10
+            pytorch-version: 1.13
         exclude:
           - python-version: 3.12
             pytorch-version: 2.0
